webgl-background-color.html started failing https://bugs.webkit.org/show_bug.cgi?id=102247

Patch by James Robinson <jamesr@chromium.org> on 2012-11-14
Reviewed by Adrienne Walker.

The compositor thread should outlive the WebView.

* DumpRenderTree/chromium/TestShell.h:
(TestShell):

Canonical link: https://commits.webkit.org/120391@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134667 268f45cc-cd09-0410-ab3c-d52691b4dbfc